--- a/main.html
+++ b/main.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uppercase on Blur</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Enter Your Name</h1>
+    <label for="fname">Name:</label>
+    <input type="text" id="fname" placeholder="Enter your name" />
 
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
